# mpi-playground

./: CMakeLists.txt
include/: timer.hpp
src/: CMakeLists.txt
src/allgather/: CMakeLists.txt  allgather.cpp
src/cudamemcpy/: CMakeLists.txt  cudamemcpy.cpp
src/pingpong/: CMakeLists.txt  cpu_pingpong.cpp
